# rust_web_app_questions

./: Cargo.toml  logs.txt  questions.json
src/: error.rs  main.rs  store.rs
src/routes/: answer.rs  question.rs
src/types/: answer.rs  pagination.rs  question.rs
